--- a/templates/popup/docs/context_menu.html
+++ b/templates/popup/docs/context_menu.html
@@ -1,11 +1,12 @@
 <div id="docs-context-menu" class="docs-context-menu" hidden>
     <button type="button" data-action="open">{{ docs_text.menu_open }}</button>
-    <button type="button" data-action="edit">{{ docs_text.menu_edit }}</button>
+    <button type="button" data-action="download">{{ docs_text.menu_download }}</button>
     {% if docs_can_manage_acl %}
     <button type="button" data-action="permissions">{{ docs_text.menu_permissions }}</button>
     {% endif %}
     <button type="button" data-action="new-folder">{{ docs_text.menu_new_folder }}</button>
     <button type="button" data-action="new-doc">{{ docs_text.menu_new_document }}</button>
+    <button type="button" data-action="edit">{{ docs_text.menu_edit }}</button>
     <button type="button" data-action="rename">{{ docs_text.menu_rename }}</button>
     <button type="button" data-action="delete">{{ docs_text.menu_delete }}</button>
 </div>
