--- a/templates/docs/view.html
+++ b/templates/docs/view.html
@@ -8,6 +8,7 @@
         <div class="docs-toolbar-left">
             <div class="docs-title-row">
                 <h1 class="docs-title">{{ doc_title }}</h1>
+                <button class="docs-help-icon-link" type="button" id="docs-page-help-btn" aria-label="{{ docs_text.help_button }}" title="{{ docs_text.help_button }}"><span class="docs-help-icon-symbol" aria-hidden="true"></span></button>
             </div>
             <div class="docs-subtitle docs-path-breadcrumbs">
                 {% for crumb in view_breadcrumbs %}
@@ -21,14 +22,12 @@
         <div class="docs-toolbar-right">
             {% include "docs/_auth_account.html" %}
             <div class="docs-toolbar-actions">
-                <button class="docs-help-icon-link" type="button" id="docs-page-help-btn" aria-label="{{ docs_text.help_button }}" title="{{ docs_text.help_button }}"><span class="docs-help-icon-symbol" aria-hidden="true"></span></button>
                 {% include "docs/_auth_button.html" %}
                 <a class="docs-btn" href="{{ docs_api_download_url }}?path={{ doc_relative_path|urlencode }}">{{ docs_text.download_button }}</a>
                 {% if doc_can_edit %}
-                    <a class="docs-btn" href="{{ docs_base_url }}">{{ docs_text.list_button }}</a>
                     <a class="docs-btn" href="{{ docs_write_url }}?path={{ doc_relative_path|urlencode }}">{{ docs_text.edit_button }}</a>
                 {% endif %}
-                {% if docs_can_edit %}
+                {% if doc_can_edit %}
                     <button class="docs-btn" type="button" id="docs-delete-btn">{{ docs_text.delete_button }}</button>
                 {% endif %}
             </div>
@@ -45,7 +44,7 @@
     data-parent-dir="{{ doc_parent_dir }}"
     data-ui-lang="{{ ui_lang|default:'ko' }}"
 >
-    <article class="docs-markdown">{{ doc_content_html }}</article>
+    <article class="{{ doc_content_class }}">{{ doc_content_html }}</article>
 </main>
 
 {% include "popup/docs/confirm_modal.html" %}
