--- a/templates/fun/minigame.html
+++ b/templates/fun/minigame.html
@@ -68,8 +68,13 @@
             align-items: center;
         }
 
+        .minigame-link:visited {
+            color: #f5f5f5;
+        }
+
         .minigame-link:hover,
-        .minigame-link:focus-visible {
+        .minigame-link:focus-visible,
+        .minigame-link:active {
             background: rgba(255, 255, 255, 0.08);
             border-color: rgba(255, 255, 255, 0.4);
             transform: translateY(-1px);
